first basic app completed

--- a/firstApp/firstApp/Views/Home/Index.cshtml
+++ b/firstApp/firstApp/Views/Home/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿
-<html>
-<head>
-</head>
-<body>
+
     <h3>Burası; Home/Index</h3>
     <h4>Hoşgeldin @ViewBag.UserName</h4>
     @if (ViewBag.Hour >=  18)
@@ -19,7 +16,6 @@
         
     }*@
     <p>
-        Sistemimize kayıt olmak için <a asp-action="Register" asp-controller="Home" > tıklayınız</a>
+        Sistemimize kayıt olmak için <a asp-action="Register" asp-controller="Home" class="btn btn-success" > tıklayınız</a>
     </p>
-</body>
-</html>
+
