Dependency Injection and IoC implementation with .NET Core

--- a/eshop/eshop/Views/Home/Index.cshtml
+++ b/eshop/eshop/Views/Home/Index.cshtml
@@ -17,19 +17,22 @@
             @:</div><div class="row m-2">
         }
         <div class="col-3">
-            <div class="card">
-                <img src="@product.ImageUrl" class="img-fluid" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">@product.Name</h5>
-                    <p class="card-text">@product.Description</p>
-                    <p class="card-text">@product.Price yerine @(product.Price * (1-product.Discount)) TL</p>
-
-                    <a href="#" class="btn btn-primary">Sepete Ekle</a>
-                </div>
-            </div>
+           <partial name="_productCard" model="@product"/>
         </div>
 
         rowCount++;
     }
 
 </div>
+
+
+  <ul class="pagination">
+  
+   @for (int i = 1; i <= ViewBag.Pages; i++)
+    {
+         <li class="page-item"><a class="page-link" asp-action="Index" asp-controller="Home" asp-route-pageNo="@i">@i</a></li>
+    }
+   
+    
+   
+  </ul>
