--- a/eshop/eshop/Views/Shared/_productCard.cshtml
+++ b/eshop/eshop/Views/Shared/_productCard.cshtml
@@ -6,6 +6,6 @@
         <p class="card-text">@Model.Description</p>
         <p class="card-text">@Model.Price yerine @(Model.Price * (1 - Model.Discount)) TL</p>
 
-        <a href="#" class="btn btn-primary basket" data-id="@Model.Id">Sepete Ekle</a>
+        <a class="btn btn-primary basket" data-id="@Model.Id">Sepete Ekle</a>
     </div>
 </div>
