Adding post request on controller

--- a/eshop/eshop/Views/Products/Edit.cshtml
+++ b/eshop/eshop/Views/Products/Edit.cshtml
@@ -44,7 +44,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <input asp-for="CategoryId" class="form-control" />
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.Categories">
+                </select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
