--- a/eshop/eshop/Views/Shared/_Layout.cshtml
+++ b/eshop/eshop/Views/Shared/_Layout.cshtml
@@ -28,6 +28,26 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Shopping" asp-action="Index">Sepetiniz</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Logout"> @User.Identity.Name (Çıkış yap)</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Login"> Giriş</a>
+                            </li>
+                        }
+
+                        @if (User.IsInRole("Admin") || User.IsInRole("Editor"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index"> Ürün İşlemleri</a>
+                            </li>
+                        }
+
                     </ul>
                 </div>
             </div>
