--- a/eshop/eshop/Views/Users/Login.cshtml
+++ b/eshop/eshop/Views/Users/Login.cshtml
@@ -10,8 +10,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Login">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="Login" asp-route-gidilecekSayfa="@ViewBag.ReturnUrl">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
